# daxiang_trade

./: .gitignore  README.MD  bitmex_auth.py  bitmex_ms.py  bitmex_websocket.py  bitmex_ws.py  data.py  data_livetrade.py  indicator.py  jupyter-notebook-test.ipynb  main.py  note.MD  portfolio.py  pyproject.toml  requirements.txt  settings.py  strategy.py  study_bitmex_ws.py  test_data.py  test_utils.py  utils.py  web.py
log/: daxiang_robot.log.20190428
src/: coinflex.py  coinflex_base.py  coinflex_fly.py  coinflex_flypig.py  coinflex_rest.py  coinflex_turtle.py  coinflex_ws.py  data.py  portfolio.py  settings.py  strategy.py  utils.py  websocket_app.py  websocket_base.py
src/common/: constant.py  global_utils.py
study/: Vdub_FX_SniperVX3.pine  a_class.py  b_class.py  bitmex.py  bitmex_ws.py  coinflex_ws.py  portfolio.py  requirements.txt  study_bitmex_lib.ipynb  study_bitmex_package.py  study_bitmex_ws.py  tick_data_base.py  web.py
study/huobi/: huobi_api.py  huobi_utils.py  market_service.py  service_base.py  tick_data.py  trade_service.py
