[tool.poetry]
name = "daxiang_trade"
version = "0.1.0"
description = ""
authors = ["Tang Wei <tw7613781@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.27.1"
python-dotenv = "^0.19.2"
websockets = "^10.1"
asyncio = "^3.4.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
